Backend development complete along with email integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=paypal_demo
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=587
+spring.mail.username=a98b44bc1328b4
+spring.mail.password=d2425764da4334
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
